--- a/style.css
+++ b/style.css
@@ -10,37 +10,57 @@ body {
     font-family: Outfit, sans-serif;
 }
 
+
 /*Modal*/
+
 #modal {
-    width: 250px;
-    padding: 15px;
-    margin: 50px auto 0;
+    width: 320px;
+    height: fit-content;
+    padding: 16px 16px 40px;
+    margin: 152px auto 0;
     background-color: hsl(0, 0%, 100%);
-    border-radius: 15px;
+    border-radius: 20px;
+    box-shadow: 0px 25px 25px 0px hsla(0, 0%, 100%, 0.05);
 }
 
-#modal img {
-    display: block;
-    max-width: 100%;
-    border-radius: 10px;
+#image_container {
+    position: relative;
+    margin: 0 auto 24px;
+}
+
+#image_container .oval {
+    position: relative;
+    z-index: 1;
+    width: 100%;
+}
+
+#image_container .qr_code {
+    position: absolute;
+    z-index: 2;
+    top: 80px;
+    left: 80px;
 }
 
 #modal article {
     text-align: center;
-    padding: 0 10px;
+    margin: 24px 16px 0;
+    width: 288px;
 }
 
 #modal article h1 {
-    margin: 18px 0;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 700;
+    margin: 0 0 16px;
 }
 
 #modal article p {
     font-size: 15px;
     color: hsl(220, 15%, 55%);
-    margin: 20px 0;
     font-weight: 400;
+    letter-spacing: 0.188px;
+    font-style: normal;
+    line-height: normal;
+    margin: 0 16px;
 }
 
 
@@ -49,8 +69,8 @@ body {
 .attribution {
     font-size: 11px;
     text-align: center;
-    position: fixed;
-    bottom: 0;
+    position: relative;
+    bottom: 0px;
     width: 100%;
     padding: 10px;
 }
