--- a/style.css
+++ b/style.css
@@ -12,36 +12,38 @@ body {
 /*Modal*/
 
 #modal {
+  box-sizing: border-box;
   width: 320px;
-  height: fit-content;
   padding: 16px 16px 40px;
   margin: 152px auto 0;
   background-color: hsl(0, 0%, 100%);
   border-radius: 20px;
-  box-shadow: 0px 25px 25px 0px hsla(0, 0%, 100%, 0.05);
+  box-shadow: 0px 25px 25px 0px hsla(0, 0%, 0%, 0.05);
 }
 
 #image_container {
   position: relative;
-  margin: 0 auto 24px;
+  width: 288px;
+  height: 288px;
+  margin: 0 0 24px;
 }
 
 #image_container .oval {
   position: relative;
   z-index: 1;
-  width: 100%;
+  width: 288px;
 }
 
 #image_container .qr_code {
   position: absolute;
   z-index: 2;
-  top: 80px;
-  left: 80px;
+  top: 64px;
+  left: 64px;
 }
 
 #modal article {
   text-align: center;
-  margin: 24px 16px 0;
+  margin: 24px 0 0;
   width: 288px;
 }
 
@@ -49,6 +51,7 @@ body {
   font-size: 22px;
   font-weight: 700;
   margin: 0 0 16px;
+  color: hsl(218, 44%, 22%);
 }
 
 #modal article p {
@@ -66,12 +69,8 @@ body {
 .attribution {
   font-size: 11px;
   text-align: center;
-  position: relative;
+  position: fixed;
   bottom: 0px;
   width: 100%;
   padding: 10px;
-}
-
-.attribution a {
-  color: hsl(218, 44%, 22%);
 }
